program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -4068,9 +4068,9 @@ msgid "Bits per channel"
 msgstr "Kanal başına bit"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Bits per colour channel:"
-msgstr "Görüntü: renk kanalı başına bit"
+msgstr "Renk kanalı başına bit:"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
@@ -4395,9 +4395,9 @@ msgid "Causes mkvmerge to write a second set of identical track headers near the
 msgstr "Mkvmerge'ün dosyanın sonuna yakın ikinci bir benzer iz üstbilgileri kümesini yazmaya neden olur (tüm kümelerden sonra)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2215
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Cb subsampling:"
-msgstr "Görüntü: dikey Cb alt örneklemesi"
+msgstr "Cb alt örnekleme:"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:333
 #, no-c-format
@@ -4697,19 +4697,19 @@ msgid "Checking this option causes the GUI to set that compression to \"none\" b
 msgstr "Bu seçeneği işaretlemek, dosyaları eklerken tüm iz türleri için GKA'nın bu sıkıştırmayı varsayılan olarak \"none\" seçeneğine ayarlamasına neden olur."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Chroma siting:"
-msgstr "Görüntü: renk doygunluğu yerleşimi"
+msgstr "Renk doygunluğu yerleşimi:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2218
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Chroma subsampling:"
-msgstr "Görüntü: dikey renk doygunluğu alt örneklemesi"
+msgstr "Renk doygunluğu alt örnekleme:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2224
 #, no-c-format
 msgid "Chromaticity coordinates:"
-msgstr ""
+msgstr "Renklilik koordinatları:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2107
 #, no-c-format
@@ -4857,9 +4857,9 @@ msgid "Colour matrix coefficients"
 msgstr "Renk matrisi katsayıları"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour matrix coefficients:"
-msgstr "Renk matrisi katsayıları"
+msgstr "Renk matrisi katsayıları:"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
@@ -4867,9 +4867,9 @@ msgid "Colour primaries"
 msgstr "Renk öncelikleri"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour primaries:"
-msgstr "Renk öncelikleri"
+msgstr "Renk öncelikleri:"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
@@ -4877,9 +4877,9 @@ msgid "Colour range"
 msgstr "Renk paleti"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour range:"
-msgstr "Renk paleti"
+msgstr "Renk paleti:"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
@@ -8572,9 +8572,9 @@ msgid "Maximum content light"
 msgstr "En fazla içerik ışığı"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2216
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum content light:"
-msgstr "En fazla içerik ışığı"
+msgstr "En fazla içerik ışığı:"
 
 #: src/common/kax_element_names.cpp:137
 #, no-c-format
@@ -8582,9 +8582,9 @@ msgid "Maximum frame light"
 msgstr "En fazla kare ışığı"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2217
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum frame light:"
-msgstr "En fazla kare ışığı"
+msgstr "En fazla kare ışığı:"
 
 #: src/common/property_element.cpp:182
 #, no-c-format
@@ -8602,9 +8602,9 @@ msgid "Maximum luminance in candelas per square meter (cd/m²)."
 msgstr "Kandela bölü metrekare (cd/m²) olarak en fazla parlaklık."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2223
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum luminance:"
-msgstr "En fazla parlaklık"
+msgstr "En fazla parlaklık:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2254
 #, no-c-format
@@ -8655,9 +8655,9 @@ msgid "Minimum luminance in candelas per square meter (cd/m²)."
 msgstr "Kandela bölü metrekare (cd/m²) olarak en az parlaklık."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2226
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Minimum luminance:"
-msgstr "En az parlaklık"
+msgstr "En az parlaklık:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2178
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2240
@@ -9713,9 +9713,9 @@ msgid "Pending manual start"
 msgstr "Elle başlatma beklemede"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2229
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pitch rotation:"
-msgstr "İzdüşümün meyil dönüşü"
+msgstr "Meyil dönüşü:"
 
 #: src/common/kax_element_names.cpp:154
 #, no-c-format
@@ -10026,9 +10026,9 @@ msgid "Projection type"
 msgstr "İzdüşüm türü"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2228
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection type:"
-msgstr "İzdüşüm türü"
+msgstr "İzdüşüm türü:"
 
 #: src/common/kax_element_names.cpp:143
 #, no-c-format
@@ -10051,9 +10051,9 @@ msgid "Projection's yaw rotation"
 msgstr "İzdüşümün sapma dönüşü"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2231
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection-specific data:"
-msgstr "Görüntü: izdüşümü belirli veri"
+msgstr "İzdüşüme özgü veri:"
 
 #: src/mkvtoolnix-gui/header_editor/page_model.cpp:170
 #: src/mkvtoolnix-gui/merge/track_model.cpp:86
@@ -10567,9 +10567,9 @@ msgid "Right-click to add, append and remove files"
 msgstr "Dosyaları eklemek, ilave etmek ve kaldırmak için sağ tuşa tıklayın"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2232
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Roll rotation:"
-msgstr "Süre:"
+msgstr "Yuvarlama dönüşü:"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:270
 #, no-c-format
@@ -14176,9 +14176,9 @@ msgid "Tracks:"
 msgstr "İzler:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2212
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Transfer characteristics:"
-msgstr "Görüntü: aktarım karakteristikleri"
+msgstr "Aktarım karakteristikleri:"
 
 #: src/common/file_types.cpp:104
 #: src/output/p_truehd.h:41
@@ -15066,9 +15066,9 @@ msgid "White colour coordinate y"
 msgstr "Beyaz renk y koordinatı"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "White colour coordinates:"
-msgstr "Beyaz renk x koordinatı"
+msgstr "Beyaz renk koordinatları:"
 
 #: src/common/property_element.cpp:154
 #, no-c-format
@@ -15201,9 +15201,9 @@ msgid "Xiph lacing"
 msgstr "Xiph bağlama"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2230
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Yaw rotation:"
-msgstr "Süre:"
+msgstr "Sapma dönüşü:"
 
 #: src/mkvtoolnix-gui/header_editor/bool_value_page.cpp:30
 #: src/mkvtoolnix-gui/header_editor/bool_value_page.cpp:43
