program translations: update Chinese Traditional (Taiwan)

--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -308,7 +308,7 @@ msgid ""
 "                           The transfer characteristics of the video.\n"
 msgstr ""
 "  --colour-transfer-characteristics <TID:n>\n"
-"                           轉換視訊的類型。\n"
+"                           視訊的色彩轉換類型。\n"
 
 #: src/merge/mkvmerge.cpp:392
 #, no-c-format
@@ -4032,9 +4032,9 @@ msgid "Bits per channel"
 msgstr "每頻道取樣多少位元"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Bits per colour channel:"
-msgstr "視訊: 每色彩通道位元"
+msgstr "每色彩通道位元:"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
@@ -8533,9 +8533,9 @@ msgid "Maximum content light"
 msgstr "最高內容亮度"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2216
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum content light:"
-msgstr "最高內容亮度"
+msgstr "最高內容亮度:"
 
 #: src/common/kax_element_names.cpp:137
 #, no-c-format
@@ -8543,9 +8543,9 @@ msgid "Maximum frame light"
 msgstr "最高影格亮度"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2217
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum frame light:"
-msgstr "最高影格亮度"
+msgstr "最高影格亮度:"
 
 #: src/common/property_element.cpp:182
 #, no-c-format
@@ -8563,9 +8563,9 @@ msgid "Maximum luminance in candelas per square meter (cd/m²)."
 msgstr "每平方公尺(cd/m2)以燭光為單位的最大亮度。"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2223
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum luminance:"
-msgstr "最大亮度"
+msgstr "最高亮度:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2254
 #, no-c-format
@@ -8616,9 +8616,9 @@ msgid "Minimum luminance in candelas per square meter (cd/m²)."
 msgstr "每平方公尺(cd/m2)以燭光為單位的最大低度。"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2226
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Minimum luminance:"
-msgstr "最低亮度"
+msgstr "最低亮度:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2178
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2240
@@ -12015,7 +12015,7 @@ msgstr "視訊的色彩原色。"
 #: src/common/property_element.cpp:179
 #, no-c-format
 msgid "The colour transfer characteristics of the video."
-msgstr "視訊的色彩傳輸類型。"
+msgstr "視訊的色彩轉換類型。"
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:99
 #, no-c-format
@@ -14123,9 +14123,9 @@ msgid "Tracks:"
 msgstr "軌道列表:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2212
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Transfer characteristics:"
-msgstr "視訊: 傳送類型"
+msgstr "轉換類型:"
 
 #: src/common/file_types.cpp:104
 #: src/output/p_truehd.h:41
@@ -14736,7 +14736,7 @@ msgstr "視訊: 指定外觀比例的資料"
 #: src/common/property_element.cpp:179
 #, no-c-format
 msgid "Video: transfer characteristics"
-msgstr "視訊: 傳送類型"
+msgstr "視訊: 轉換類型"
 
 #: src/common/property_element.cpp:175
 #, no-c-format
@@ -15013,9 +15013,9 @@ msgid "White colour coordinate y"
 msgstr "白色座標 y"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "White colour coordinates:"
-msgstr "白色座標 x"
+msgstr "白色座標:"
 
 #: src/common/property_element.cpp:154
 #, no-c-format
