man page translations: update Catalan

--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -2046,7 +2046,7 @@ msgstr "Permet normalitzar totes les etiquetes d'idioma BCP 47 de la IETF a la s
 #: doc/man/mkvmerge.xml:568
 #: doc/man/mkvpropedit.xml:411
 msgid "In the canonical form all subtags for which preferred values exist are replaced by those preferred values. This converts e.g. '<literal>zh-yue-jyutping</literal>' to '<literal>yue-jyutping</literal>' or '<literal>fr-FX</literal>' to '<literal>fr-FR</literal>'."
-msgstr ""
+msgstr "En la forma canònica, totes les subetiquetes per a les quals existeixen els valors preferits se substitueixen per aquells valors preferits. Això es converteix, p. ex. «<literal>zh-yue-jyutping</literal>» a «<literal>yue-jyutping</literal>» o «<literal>fr-FX</literal>» a «<literal>fr-FR</literal>»."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:573
