program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -4140,9 +4140,9 @@ msgid "Bits per channel"
 msgstr "Bits per canal"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Bits per colour channel:"
-msgstr "Vídeo: bits per canal de color"
+msgstr "Bits per canal de color:"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
@@ -4467,9 +4467,9 @@ msgid "Causes mkvmerge to write a second set of identical track headers near the
 msgstr "Fa que el «mkvmerge» escrigui un segon conjunt de capçaleres de pista idèntiques a prop del final del fitxer (després de tots els clústers)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2215
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Cb subsampling:"
-msgstr "Submostra Cb vertical"
+msgstr "Submostra Cb:"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:333
 #, no-c-format
@@ -4769,19 +4769,19 @@ msgid "Checking this option causes the GUI to set that compression to \"none\" b
 msgstr "Marcant aquesta opció provocareu que la IGU estableixi per omissió la compressió a «cap» per a tots els tipus de pista quan s'afegeixin fitxers."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Chroma siting:"
-msgstr "Vídeo: posició de la crominància"
+msgstr "Posició de la crominància:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2218
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Chroma subsampling:"
-msgstr "Vídeo: posició de la crominància vertical"
+msgstr "Submostra de la crominància:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2224
 #, no-c-format
 msgid "Chromaticity coordinates:"
-msgstr ""
+msgstr "Coordenades de la cromaticitat:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2107
 #, no-c-format
@@ -4930,9 +4930,9 @@ msgid "Colour matrix coefficients"
 msgstr "Coeficients de la matriu del color"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour matrix coefficients:"
-msgstr "Coeficients de la matriu del color"
+msgstr "Coeficients de la matriu del color:"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
@@ -4940,9 +4940,9 @@ msgid "Colour primaries"
 msgstr "Colors primaris"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour primaries:"
-msgstr "Colors primaris"
+msgstr "Colors primaris:"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
@@ -4950,9 +4950,9 @@ msgid "Colour range"
 msgstr "Interval del color"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour range:"
-msgstr "Interval del color"
+msgstr "Interval de colors:"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
@@ -8647,9 +8647,9 @@ msgid "Maximum content light"
 msgstr "Màxim de llum al contingut"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2216
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum content light:"
-msgstr "Màxim de llum al contingut"
+msgstr "Màxim de llum al contingut:"
 
 #: src/common/kax_element_names.cpp:137
 #, no-c-format
@@ -8657,9 +8657,9 @@ msgid "Maximum frame light"
 msgstr "Màxim de llum al fotograma"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2217
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum frame light:"
-msgstr "Màxim de llum al fotograma"
+msgstr "Màxim de llum al fotograma:"
 
 #: src/common/property_element.cpp:182
 #, no-c-format
@@ -8677,9 +8677,9 @@ msgid "Maximum luminance in candelas per square meter (cd/m²)."
 msgstr "Luminància màxima en candeles per metre quadrat (cd/m²)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2223
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum luminance:"
-msgstr "Luminància màxima"
+msgstr "Luminància màxima:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2254
 #, no-c-format
@@ -8730,9 +8730,9 @@ msgid "Minimum luminance in candelas per square meter (cd/m²)."
 msgstr "Luminància mínima en candeles per metre quadrat (cd/m²)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2226
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Minimum luminance:"
-msgstr "Luminància mínima"
+msgstr "Luminància mínima:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2178
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2240
@@ -9789,9 +9789,9 @@ msgid "Pending manual start"
 msgstr "Inici manual pendent"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2229
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pitch rotation:"
-msgstr "Gir de la presentació de la projecció"
+msgstr "Gir de la presentació:"
 
 #: src/common/kax_element_names.cpp:154
 #, no-c-format
@@ -10103,9 +10103,9 @@ msgid "Projection type"
 msgstr "Tipus de projecció"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2228
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection type:"
-msgstr "Tipus de projecció"
+msgstr "Tipus de projecció:"
 
 #: src/common/kax_element_names.cpp:143
 #, no-c-format
@@ -10128,9 +10128,9 @@ msgid "Projection's yaw rotation"
 msgstr "Gir de l'encaix de la projecció"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2231
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection-specific data:"
-msgstr "Vídeo: dades específiques de la projecció"
+msgstr "Dades específiques de la projecció:"
 
 #: src/mkvtoolnix-gui/header_editor/page_model.cpp:170
 #: src/mkvtoolnix-gui/merge/track_model.cpp:86
@@ -10645,9 +10645,9 @@ msgid "Right-click to add, append and remove files"
 msgstr "Clic dret per a afegir, annexar i suprimir fitxers"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2232
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Roll rotation:"
-msgstr "Durada:"
+msgstr "Gir del rotllo:"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:270
 #, no-c-format
@@ -14255,9 +14255,9 @@ msgid "Tracks:"
 msgstr "Pistes:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2212
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Transfer characteristics:"
-msgstr "Vídeo: característiques de la transferència"
+msgstr "Característiques de la transferència:"
 
 #: src/common/file_types.cpp:104
 #: src/output/p_truehd.h:41
@@ -14806,9 +14806,9 @@ msgid "Video: colour range"
 msgstr "Vídeo: interval del color"
 
 #: src/common/property_element.cpp:174
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: horizontal Cb subsampling"
-msgstr "Submostra Cb horitzontal"
+msgstr "Vídeo: submostra Cb horitzontal"
 
 #: src/common/property_element.cpp:176
 #, no-c-format
@@ -14816,9 +14816,9 @@ msgid "Video: horizontal chroma siting"
 msgstr "Vídeo: posició de la crominància horitzontal"
 
 #: src/common/property_element.cpp:172
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: horizontal chroma subsampling"
-msgstr "Vídeo: posició de la crominància horitzontal"
+msgstr "Vídeo: submostra de la crominància horitzontal"
 
 #: src/common/property_element.cpp:181
 #, no-c-format
@@ -14871,9 +14871,9 @@ msgid "Video: transfer characteristics"
 msgstr "Vídeo: característiques de la transferència"
 
 #: src/common/property_element.cpp:175
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: vertical Cb subsampling"
-msgstr "Submostra Cb vertical"
+msgstr "Vídeo: submostra Cb vertical"
 
 #: src/common/property_element.cpp:177
 #, no-c-format
@@ -14881,9 +14881,9 @@ msgid "Video: vertical chroma siting"
 msgstr "Vídeo: posició de la crominància vertical"
 
 #: src/common/property_element.cpp:173
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: vertical chroma subsampling"
-msgstr "Vídeo: posició de la crominància vertical"
+msgstr "Vídeo: submostra de la crominància vertical"
 
 #: src/common/property_element.cpp:192
 #, no-c-format
@@ -15145,9 +15145,9 @@ msgid "White colour coordinate y"
 msgstr "Coordenades de «y» per al color blanc"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "White colour coordinates:"
-msgstr "Coordenades de «x» per al color blanc"
+msgstr "Coordenades per al color blanc:"
 
 #: src/common/property_element.cpp:154
 #, no-c-format
@@ -15280,9 +15280,9 @@ msgid "Xiph lacing"
 msgstr "Lligam Xiph"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2230
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Yaw rotation:"
-msgstr "Durada:"
+msgstr "Gir del groc:"
 
 #: src/mkvtoolnix-gui/header_editor/bool_value_page.cpp:30
 #: src/mkvtoolnix-gui/header_editor/bool_value_page.cpp:43
