--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4102,9 +4102,9 @@ msgid "Bits per channel"
 msgstr "Bits por canal"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2213
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Bits per colour channel:"
-msgstr "Vídeo: bits por canal de cor"
+msgstr "Bits por canal de cor:"
 
 #: src/common/property_element.cpp:213
 #, no-c-format
@@ -4429,9 +4429,9 @@ msgid "Causes mkvmerge to write a second set of identical track headers near the
 msgstr "Faz com que o mkvmerge grave um segundo conjunto de cabeçalhos de faixa idênticos próximo ao final do arquivo (depois de todos os clusters)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2215
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Cb subsampling:"
-msgstr "Subamostra de Cb vertical"
+msgstr "Sub-amostragem Cb:"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:333
 #, no-c-format
@@ -4731,19 +4731,19 @@ msgid "Checking this option causes the GUI to set that compression to \"none\" b
 msgstr "Marcar esta opção faz com que a GUI defina essa compressão como \"nenhuma\" por padrão para todos os tipos de faixa ao adicionar arquivos."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2221
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Chroma siting:"
-msgstr "Posição relativa do cue: {0}"
+msgstr "Localização de croma:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2218
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Chroma subsampling:"
-msgstr "Vídeo: colocação de croma vertical"
+msgstr "Subamostragem de croma:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2224
 #, no-c-format
 msgid "Chromaticity coordinates:"
-msgstr ""
+msgstr "Coordenadas de cromaticidade:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2107
 #, no-c-format
@@ -4891,9 +4891,9 @@ msgid "Colour matrix coefficients"
 msgstr "Coeficientes da matriz de cores"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour matrix coefficients:"
-msgstr "Coeficientes da matriz de cores"
+msgstr "Coeficiente da matriz de cores:"
 
 #: src/common/kax_element_names.cpp:135
 #, no-c-format
@@ -4901,9 +4901,9 @@ msgid "Colour primaries"
 msgstr "Cores primárias"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2214
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour primaries:"
-msgstr "Cores primárias"
+msgstr "Cores primárias:"
 
 #: src/common/kax_element_names.cpp:133
 #, no-c-format
@@ -4911,9 +4911,9 @@ msgid "Colour range"
 msgstr "Gama de cores"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2220
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Colour range:"
-msgstr "Gama de cores"
+msgstr "Gama de cores:"
 
 #: src/common/kax_element_names.cpp:161
 #, no-c-format
@@ -8606,9 +8606,9 @@ msgid "Maximum content light"
 msgstr "Luz máxima de conteúdo"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2216
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum content light:"
-msgstr "Luz máxima de conteúdo"
+msgstr "Luz máxima do conteúdo:"
 
 #: src/common/kax_element_names.cpp:137
 #, no-c-format
@@ -8616,9 +8616,9 @@ msgid "Maximum frame light"
 msgstr "Luz máxima do quadro"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2217
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum frame light:"
-msgstr "Luz máxima do quadro"
+msgstr "Luz máxima do quadro:"
 
 #: src/common/property_element.cpp:182
 #, no-c-format
@@ -8636,9 +8636,9 @@ msgid "Maximum luminance in candelas per square meter (cd/m²)."
 msgstr "Luminância máxima em candelas por metro quadrado (cd/m²)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2223
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Maximum luminance:"
-msgstr "Luminância máxima"
+msgstr "Luminância máxima:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2254
 #, no-c-format
@@ -8689,9 +8689,9 @@ msgid "Minimum luminance in candelas per square meter (cd/m²)."
 msgstr "Luminância mínima em candelas por metro quadrado (cd/m²)."
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2226
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Minimum luminance:"
-msgstr "Luminância mínima"
+msgstr "Luminância mínima:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2178
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2240
@@ -9747,9 +9747,9 @@ msgid "Pending manual start"
 msgstr "Pendente início manual"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2229
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Pitch rotation:"
-msgstr "Rotação de arfagem da projeção"
+msgstr "Rotação da arfagem:"
 
 #: src/common/kax_element_names.cpp:154
 #, no-c-format
@@ -10061,9 +10061,9 @@ msgid "Projection type"
 msgstr "Tipo da projeção"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2228
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection type:"
-msgstr "Tipo da projeção"
+msgstr "Tipo de projeção:"
 
 #: src/common/kax_element_names.cpp:143
 #, no-c-format
@@ -10086,9 +10086,9 @@ msgid "Projection's yaw rotation"
 msgstr "Rotação de guinada da projeção"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2231
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Projection-specific data:"
-msgstr "Vídeo: dados específicos da projeção"
+msgstr "Dados específicos da projeção:"
 
 #: src/mkvtoolnix-gui/header_editor/page_model.cpp:170
 #: src/mkvtoolnix-gui/merge/track_model.cpp:86
@@ -10602,9 +10602,9 @@ msgid "Right-click to add, append and remove files"
 msgstr "Clique com botão direito para adicionar, acrescentar e remover arquivos"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2232
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Roll rotation:"
-msgstr "Duração:"
+msgstr "Rotação de rolagem:"
 
 #: src/mkvtoolnix-gui/jobs/job.cpp:270
 #, no-c-format
@@ -14212,9 +14212,9 @@ msgid "Tracks:"
 msgstr "Faixas:"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2212
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Transfer characteristics:"
-msgstr "Vídeo: características da transferência"
+msgstr "Características de transferência:"
 
 #: src/common/file_types.cpp:104
 #: src/output/p_truehd.h:41
@@ -14763,9 +14763,9 @@ msgid "Video: colour range"
 msgstr "Vídeo: gama de cores"
 
 #: src/common/property_element.cpp:174
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: horizontal Cb subsampling"
-msgstr "Subamostra de Cb horizontal"
+msgstr "Vídeo: subamostragem horizontal de Cb"
 
 #: src/common/property_element.cpp:176
 #, no-c-format
@@ -14773,9 +14773,9 @@ msgid "Video: horizontal chroma siting"
 msgstr "Vídeo: localização de croma horizontal"
 
 #: src/common/property_element.cpp:172
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: horizontal chroma subsampling"
-msgstr "Vídeo: localização de croma horizontal"
+msgstr "Vídeo: subamostragem de croma horizontal"
 
 #: src/common/property_element.cpp:181
 #, no-c-format
@@ -14828,9 +14828,9 @@ msgid "Video: transfer characteristics"
 msgstr "Vídeo: características da transferência"
 
 #: src/common/property_element.cpp:175
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: vertical Cb subsampling"
-msgstr "Subamostra de Cb vertical"
+msgstr "Vídeo: subamostragem vertical de Cb"
 
 #: src/common/property_element.cpp:177
 #, no-c-format
@@ -14838,9 +14838,9 @@ msgid "Video: vertical chroma siting"
 msgstr "Vídeo: colocação de croma vertical"
 
 #: src/common/property_element.cpp:173
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: vertical chroma subsampling"
-msgstr "Vídeo: colocação de croma vertical"
+msgstr "Vídeo: subamostragem de croma vertical"
 
 #: src/common/property_element.cpp:192
 #, no-c-format
@@ -15102,9 +15102,9 @@ msgid "White colour coordinate y"
 msgstr "Coordenada y da cor branca"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2225
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "White colour coordinates:"
-msgstr "Coordenada x da cor branca"
+msgstr "Coordenadas de cor branca:"
 
 #: src/common/property_element.cpp:154
 #, no-c-format
@@ -15237,9 +15237,9 @@ msgid "Xiph lacing"
 msgstr "Laço Xiph"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2230
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Yaw rotation:"
-msgstr "Duração:"
+msgstr "Rotação de guinada:"
 
 #: src/mkvtoolnix-gui/header_editor/bool_value_page.cpp:30
 #: src/mkvtoolnix-gui/header_editor/bool_value_page.cpp:43
