man page translations: update Chinese Simplified (China)

--- a/doc/man/po4a/po/zh_CN.po
+++ b/doc/man/po4a/po/zh_CN.po
@@ -4868,7 +4868,7 @@ msgstr "mkvpropedit"
 #. type: Content of: <refentry><refnamediv><refpurpose>
 #: doc/man/mkvpropedit.xml:45
 msgid "Modify properties of existing &matroska; files without a complete remux"
-msgstr "在不进行完整的重新混流的情况下修改现有 &matroska; 文件的属性"
+msgstr "无需重新进行完整的混流，即可修改现有 &matroska; 文件的属性"
 
 #. type: Content of: <refentry><refsynopsisdiv><cmdsynopsis>
 #: doc/man/mkvpropedit.xml:51
@@ -5482,7 +5482,7 @@ msgstr "mkvtoolnix-gui"
 #. type: Content of: <refentry><refnamediv><refpurpose>
 #: doc/man/mkvtoolnix-gui.xml:45
 msgid "a GUI for &mkvmerge; including a chapter and a header editor"
-msgstr "&mkvmerge; 的 GUI，包含章节编辑器和头部字段编辑器"
+msgstr "一款 &mkvmerge; 的 GUI，还自带 ｢章节编辑器｣ 和 ｢头部字段编辑器｣"
 
 #. type: Content of: <refentry><refsynopsisdiv><cmdsynopsis>
 #: doc/man/mkvtoolnix-gui.xml:51
@@ -5527,7 +5527,7 @@ msgstr "其后所有文件名将在信息工具中打开。"
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvtoolnix-gui.xml:94
 msgid "Additionally the info tool will be selected on startup instead of the multiplexer tool."
-msgstr "此外，启动时会选择信息工具，而非混流工具。"
+msgstr "此外，启动时会选择 ｢信息工具｣，而非 ｢混流器｣ 工具。"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvtoolnix-gui.xml:99
@@ -5537,12 +5537,12 @@ msgstr "<option>--edit-chapters</option>"
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvtoolnix-gui.xml:101
 msgid "All following file names will be opened in the chapter editor."
-msgstr "后面的所有文件名都将在章节编辑器中打开。"
+msgstr "后面的所有文件名都将在 ｢章节编辑器｣ 中打开。"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvtoolnix-gui.xml:102
 msgid "Additionally the chapter editor will be selected on startup instead of the multiplexer tool."
-msgstr "此外，启动时会选择章节编辑器，而非混流工具。"
+msgstr "此外，启动时会选择 ｢章节编辑器｣ ，而非 ｢混流器｣ 工具。"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvtoolnix-gui.xml:107
@@ -5557,7 +5557,7 @@ msgstr "后面的所有文件名都将在头部编辑器中打开。"
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvtoolnix-gui.xml:110
 msgid "Additionally the header editor will be selected on startup instead of the multiplexer tool."
-msgstr "此外，启动时会选择头部编辑器，而非混流工具。"
+msgstr "此外，启动时会选择 ｢头部编辑器｣，而非 ｢混流器工具｣。"
 
 #. type: Content of: <refentry><refsect1><para>
 #: doc/man/mkvtoolnix-gui.xml:137
