program translations: update Chinese Traditional (Taiwan)

--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -15176,7 +15176,7 @@ msgstr "是"
 #: src/mkvtoolnix-gui/forms/header_editor/attachments_page.h:110
 #, no-c-format
 msgid "You can add attachments by clicking on the button below, by right-clicking on a node in the tree and selecting \"Add attachments\" from the popup menu or by dragging & dropping files here or onto the tree."
-msgstr "要加入附件，可以點擊下面的按鈕、右擊樹狀結構中的節點並從彈出選單中選擇 '加入附件' ，或將檔案拖曳到此處或拖曳到樹狀結構中。"
+msgstr "要加入附件，可以點擊下面的按鈕、右擊樹狀結構中的節點並從彈出選單中選擇 '加入附件'、將檔案拖曳到此處或拖曳到樹狀結構中。"
 
 #: src/mkvtoolnix-gui/forms/merge/tool.h:225
 #, no-c-format
