--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+mkvtoolnix (68.0.0-0~bunkus01) jammy; urgency=low
+
+  * New version.
+
+ -- Moritz Bunkus <moritz@bunkus.org>  Sun, 22 May 2022 20:12:13 +0200
+
 mkvtoolnix (67.0.0-0~bunkus01) impish; urgency=low
 
   * New version.
